cluster/apps/default/metabase/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: metabase
  name: metabase
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: metabase
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - image: metabase/metabase:v0.63.19
          imagePullPolicy: Always
          name: metabase
          ports:
            - containerPort: 3000
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
