cluster/apps/default/metabase/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: metabase
